[project]
name = "dataviztool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "plotly>=6.5.1",
    "plotly-express>=0.4.1",
    "polars>=1.37.0",
    "scikit-learn>=1.8.0",
    "streamlit>=1.52.2",
    "ucimlrepo>=0.0.7",
]
